# lm-server-rust

./: .gitignore  Cargo.toml  README.md  ensure_venv.sh  fake_server_8080.sh  fake_server_8081.sh  fake_server_8082.sh  setup.cfg
.github/workflows/: python-app.yml  rust.yml
dev/: main.py  requirements.txt
src/: lib.rs  main.rs
src/func/: mod.rs  not_testable.rs  testable.rs
tests/: test_main.py
