[package]
name = "lm_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
local-ip-address = "0.6.1"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }

[[bin]]
name = "lm_server"
path = "src/main.rs"

[lib]
name = "lm_server"
path = "src/lib.rs"
